// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react/UIFileUploader renders correctly - basic 1`] = `
<div>
  <div
    class="ui-file-uploader ui-file-uploader--large"
  >
    <input
      class="ui-file-uploader__field"
      id="z8a8d7a5zad4"
      name="test"
      type="file"
    />
    <span
      class="ui-file-uploader__files-list"
    />
  </div>
</div>
`;

exports[`react/UIFileUploader renders correctly - multiple 1`] = `
<div>
  <div
    class="ui-file-uploader"
  >
    <input
      class="ui-file-uploader__field"
      id="z8a8d7a5zad4"
      multiple=""
      name="test"
      type="file"
    />
    <span
      class="ui-file-uploader__files-list"
    />
  </div>
</div>
`;

exports[`react/UIFileUploader renders correctly - with helper 1`] = `
<div>
  <div
    class="ui-file-uploader"
  >
    <input
      class="ui-file-uploader__field"
      id="z8a8d7a5zad4"
      name="test"
      type="file"
    />
    <span
      class="ui-file-uploader__files-list"
    />
    <p
      class="ui-file-uploader__helper"
    >
      test
    </p>
  </div>
</div>
`;

exports[`react/UIFileUploader renders correctly - with id 1`] = `
<div>
  <div
    class="ui-file-uploader"
    id="test"
  >
    <input
      class="ui-file-uploader__field"
      id="z8a8d7a5zad4"
      name="test"
      type="file"
    />
    <span
      class="ui-file-uploader__files-list"
    />
  </div>
</div>
`;

exports[`react/UIFileUploader renders correctly - with label 1`] = `
<div>
  <div
    class="ui-file-uploader"
  >
    <label
      class="ui-file-uploader__label"
      for="z8a8d7a5zad4"
    >
      test
    </label>
    <input
      class="ui-file-uploader__field"
      id="z8a8d7a5zad4"
      name="test"
      type="file"
    />
    <span
      class="ui-file-uploader__files-list"
    />
  </div>
</div>
`;

exports[`react/UIFileUploader renders correctly - with left icon 1`] = `
<div>
  <div
    class="ui-file-uploader"
  >
    <label
      class="ui-file-uploader__label"
      for="z8a8d7a5zad4"
    >
      test
    </label>
    <i
      class="ui-button__icon"
    >
      star
    </i>
    <input
      class="ui-file-uploader__field"
      id="z8a8d7a5zad4"
      name="test"
      type="file"
    />
    <span
      class="ui-file-uploader__files-list"
    />
  </div>
</div>
`;

exports[`react/UIFileUploader renders correctly - with listeners 1`] = `
<div>
  <div
    class="ui-file-uploader"
  >
    <input
      class="ui-file-uploader__field"
      id="z8a8d7a5zad4"
      name="test"
      type="file"
    />
    <span
      class="ui-file-uploader__files-list"
    />
  </div>
</div>
`;

exports[`react/UIFileUploader renders correctly - with placeholder 1`] = `
<div>
  <div
    class="ui-file-uploader"
  >
    <input
      class="ui-file-uploader__field"
      id="z8a8d7a5zad4"
      name="test"
      type="file"
    />
    <span
      class="ui-file-uploader__files-list"
    >
      test
    </span>
  </div>
</div>
`;

exports[`react/UIFileUploader renders correctly - with right icon 1`] = `
<div>
  <div
    class="ui-file-uploader"
  >
    <label
      class="ui-file-uploader__label"
      for="z8a8d7a5zad4"
    >
      test
    </label>
    <input
      class="ui-file-uploader__field"
      id="z8a8d7a5zad4"
      name="test"
      type="file"
    />
    <i
      class="ui-button__icon"
    >
      star
    </i>
    <span
      class="ui-file-uploader__files-list"
    />
  </div>
</div>
`;
